@startuml
' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

' Define only the entities used in this diagram
entity party {}
entity party_postal_address {}
entity postal_address {}
entity geographic_boundary {}
entity geographic_boundary_association {}
entity geographic_boundary_type {}

party ||..|{ party_postal_address
party_postal_address }|..|| postal_address
postal_address ||..|{ geographic_boundary
geographic_boundary "from" ||..|{ "within" geographic_boundary_association
geographic_boundary "to" ||..|{ "in" geographic_boundary_association
geographic_boundary }|..|| geographic_boundary_type


@enduml
